k8s/service-production.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-scavenger-hunt-service
  namespace: scavenger-hunt
spec:
  selector:
    environment: production
    app: scavenger-hunt
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
