k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scavenger-hunt-ingress
  namespace: scavenger-hunt
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  tls:
  - hosts:
    - FQDN
    secretName: letsencrypt-prod
  rules:
  - host: FQDN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: production-scavenger-hunt-service
            port: 
              number: 80
